Fixed Some spacing issues on Why Nextcloud

--- a/custom.css
+++ b/custom.css
@@ -35,6 +35,7 @@ h4 {
     font-weight: bold;
     line-height: 1.36;
     color: #2a2a36;
+    margin-bottom: 20px;
 }
 h5 {
     font-size: 24px;
@@ -207,10 +208,11 @@ footer li {
     font-size: 20px;
     color: #434343;
     line-height: 1.36;
+    font-weight: 100;
 }
 .section-title {
-    padding-top: 90px;
-    padding-bottom: 90px;
+    padding-top: 130px;
+    padding-bottom: 100px;
 }
 
 /**
